--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -1,9 +1,19 @@
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+  db:
+    image: postgres:16-bullseye
+    expose:
+      - 5432
     ports:
-      - '5432'
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=${DB_DATABASE_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    env_file:
+      - .env
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
+    name: "kanban-app-api-postgres-data"
