--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
     "ky": "^1.2.2",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
