--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
+    "@types/deep-equal": "^1.0.4",
+    "deep-equal": "^2.2.3",
     "ky": "^1.2.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
