--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
     "@types/deep-equal": "^1.0.4",
