--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -32,4 +32,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      working-directory: ./react-app
     - run: npm run build --if-present
+      working-directory: ./react-app
