--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -31,7 +31,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: Install dependencies
       working-directory: ./react-app
-    - run: npm run build --if-present
+      run: npm ci
+    - name: Build
       working-directory: ./react-app
+      run: npm run build --if-present
