--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -19,17 +19,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version-file: ./react-app/.nvmrc
         cache: 'npm'
     - name: Install dependencies
       working-directory: ./react-app
