--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.mvc.problemdetails.enabled=true
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+spring.main.banner-mode=off
