--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -9,6 +9,7 @@
 name: Java CI with Maven
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
     paths:
@@ -31,6 +32,13 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+    - name: Run Tests
       working-directory: ./api
-      run: mvn -B package --file pom.xml
+      run: mvn -B test --file pom.xml
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v3.3.0
+    - name: Build Docker Image
+      working-directory: ./api
+      run: docker build -t kanban-app-api .
+  
+          
