REF: migrated components to mantine ui

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,11 +15,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mantine/core": "^7.15.0",
+    "@mantine/dates": "^7.15.0",
+    "@mantine/hooks": "^7.15.0",
+    "@mantine/modals": "^7.15.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
     "@types/deep-equal": "^1.0.4",
+    "dayjs": "^1.11.13",
     "deep-equal": "^2.2.3",
     "ky": "^1.2.2",
     "notistack": "^3.0.1",
@@ -40,6 +45,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.7",
