--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,22 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "type-check": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.15.0",
     "@mantine/dates": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
     "@mantine/modals": "^7.15.0",
     "@mui/icons-material": "^5.15.12",
-    "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
     "@types/deep-equal": "^1.0.4",
     "dayjs": "^1.11.13",
