--- a/react-app/package.json
+++ b/react-app/package.json
@@ -21,9 +21,12 @@
     "@mui/icons-material": "^5.15.12",
     "@tanstack/react-query": "^5.26.3",
     "@types/deep-equal": "^1.0.4",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "deep-equal": "^2.2.3",
     "ky": "^1.2.2",
+    "lodash-es": "^4.17.21",
+    "mantine-datatable": "^7.14.5",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
