--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "@mantine/hooks": "^7.15.0",
     "@mantine/modals": "^7.15.0",
     "@mui/icons-material": "^5.15.12",
+    "@tabler/icons-react": "^3.24.0",
     "@tanstack/react-query": "^5.26.3",
     "@types/deep-equal": "^1.0.4",
     "clsx": "^2.1.1",
