--- a/react-app/package.json
+++ b/react-app/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "deep-equal": "^2.2.3",
+    "firebase": "^11.1.0",
     "ky": "^1.2.2",
     "lodash-es": "^4.17.21",
     "mantine-datatable": "^7.14.5",
