--- a/react-app/package.json
+++ b/react-app/package.json
@@ -33,7 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
-    "react-router-dom": "^6.22.3",
+    "react-router": "^7.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
