--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,12 +14,17 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mantine/core": "^7.15.0",
+    "@mantine/core": "^7.15.1",
     "@mantine/dates": "^7.15.1",
-    "@mantine/hooks": "^7.15.0",
+    "@mantine/hooks": "^7.15.1",
     "@mantine/modals": "^7.15.1",
+    "@mantine/tiptap": "^7.15.1",
     "@tabler/icons-react": "^3.26.0",
     "@tanstack/react-query": "^5.62.8",
+    "@tiptap/extension-link": "^2.10.4",
+    "@tiptap/pm": "^2.10.4",
+    "@tiptap/react": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
     "@types/deep-equal": "^1.0.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
