--- a/api/pom.xml
+++ b/api/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
