--- a/api/src/main/resources/application-test.properties
+++ b/api/src/main/resources/application-test.properties
@@ -1,4 +1,5 @@
 spring.liquibase.enabled=false
 spring.jpa.hibernate.ddl-auto=create-drop
 app.cors.allowed-origins=*
+app.firebase.service-account-key-path=dummyPath
 # Database connection handled by TestContainers
