--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE_NAME
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.main.banner-mode=off
-
 app.firebase.project-id=kanban-app-b5cd2
-
+app.firebase.service-account-key-path=${FIREBASE_SERVICE_ACCOUNT_KEY_PATH}
 app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
